<resources>
    <string name="app_name">Soccer Management</string>
    <string name="profile_button">Profiles</string>
    <string name="practice_button">Practice</string>
    <string name="players_textView">Players</string>
    <string name="new_player_profile_button">New Profile</string>
    <string name="profile_info_nameTV">Name: </string>
    <string name="profile_info_yearTV">Year: </string>
    <string name="profile_info_positionTV">Position: </string>
    <string name="profile_submit">Submit</string>
    <string name="profile_info_presentTV">Present: </string>
    <string name="profile_info_pictureTV">Picture: </string>
    <string name="profile_take_pic_button">Take Picture</string>
    <string name="profile_first_name_hint">First Name</string>
    <string name="profile_heightFeet_hint">Height (Feet)</string>
    <string name="profile_heightInches_hint">Height (Inches)</string>
    <string name="profile_weight_hint">Weight</string>
    <string name="profile_hometown_hint">Hometown</string>
    <string name="profile_highSchool_hint">High School</string>
    <string name="profile_club_hint">Club</string>
    <string name="profile_lastName_hint">Last Name</string>
    <string name="hyper_link_button">External Links</string>
    <string name="link1_title">Carthage College Men\'s Soccer Roster</string>
    <string name="link2_title">Inside Soccer</string>
    <string name="link1">http://athletics.carthage.edu/roster.aspx?path=msoc</string>
    <string name="link2">http://www.insidesoccer.com/</string>
    <string name="link3">https://accounts.google.com/ServiceLogin?service=wise&amp;passive=true&amp;continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&amp;urp=https%3A%2F%2Fwww.google.com%2F#identifier</string>
    <string name="link4">http://daximation.com/index.php</string>
    <string name="upload_image_button">Upload Image</string>
    <string name="profile_position_hint">Position</string>
    <string name="back_to_menu_button">Back to Menu</string>

    <string-array name="years">
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
    </string-array>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_practice_set_up">PracticeSetUpActivity</string>
</resources>