<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sarah.soccermanagement.NewProfileForm">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:id="@+id/profileNameEditText"
            android:hint="@string/profile_first_name_hint">

            <requestFocus/>
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/profileLastNameEditText"
            android:hint="@string/profile_lastName_hint"
            android:layout_below="@id/profileNameEditText"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/profile_info_yearTV"
            android:id="@+id/yearTextView"
            android:layout_below="@id/profileLastNameEditText"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearSpinner"
            android:entries="@array/years"
            android:layout_toRightOf="@id/yearTextView"
            android:layout_below="@id/profileLastNameEditText"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/heightFeetEditText"
            android:inputType="number"
            android:hint="@string/profile_heightFeet_hint"
            android:layout_below="@id/yearSpinner" />


        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/heightInchesEditText"
            android:inputType="number"
            android:hint="@string/profile_heightInches_hint"
            android:layout_below="@id/heightFeetEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weightEditText"
            android:inputType="number"
            android:hint="@string/profile_weight_hint"
            android:layout_below="@id/heightInchesEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/positionEditText"
            android:inputType="text"
            android:hint="@string/profile_position_hint"
            android:layout_below="@id/weightEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homeTownEditText"
            android:inputType="text"
            android:hint="@string/profile_hometown_hint"
            android:layout_below="@id/positionEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/highSchoolEditText"
            android:inputType="text"
            android:hint="@string/profile_highSchool_hint"
            android:layout_below="@id/homeTownEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clubEditText"
            android:inputType="text"
            android:hint="@string/profile_club_hint"
            android:layout_below="@id/highSchoolEditText"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadImageButton"
            android:layout_below="@id/clubEditText"
            android:text="@string/upload_image_button"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/uploadedImagePreview"
            android:layout_below="@id/clubEditText"
            android:layout_toRightOf="@id/uploadImageButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_submit"
            android:id="@+id/profileSubmitButton"
            android:layout_below="@id/uploadImageButton" />
    </RelativeLayout>

</ScrollView>
