<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sarah.soccermanagement.HyperlinksActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/shieldc"
        android:alpha="0.4"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link1_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link1"
        android:layout_below="@+id/text"
        android:paddingTop="5dp"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link2_title"
        android:layout_below="@+id/text2"
        android:paddingTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link2"
        android:layout_below="@+id/text3"
        android:paddingTop="5dp"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Google Drive"
        android:layout_below="@+id/text4"
        android:paddingTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link3"
        android:layout_below="@+id/text5"
        android:paddingTop="5dp"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wipe Board"
        android:layout_below="@+id/text6"
        android:paddingTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link4"
        android:layout_below="@+id/text7"
        android:paddingTop="5dp"
        android:autoLink="web"/>

</RelativeLayout>
